<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, CSAndroid!</string>
    <string name="app_name">CSAndroid</string>
    <string name="wellcome">Wellcome \n Select an available cloud or add one via Menú</string>
    <string name="add_cloud">Add Cloud</string>
    <string name="cl_name">Give it a name</string>
	<string name="cl_url">Endpoint URL</string>
    <string name="cl_api_key">API Key</string>
    <string name="cl_secret_key">Secret Key</string>
    <string name="empty"></string>
    <string name="instances_empty">No instances.\nUse the menu to create one.</string>
    <string name="save">Guardar</string>
    <string name="cl_edit">Editar</string>
    <string name="cl_delete">Borrar</string>
    <string name="ovwerview_running_instances">Running Instances</string>
    <string name="overview_stopped_instances">Stopped Instances</string>
    <string name="overview_max_instances">Maximum Instances</string>
    <string name="overview_used_vols">Used Volumes</string>
    <string name="overview_max_vols">Maximum Volumes</string>
    <string name="overview_resource_usage">Resource Usage</string>
    <string name="overview_resource_ram">RAM (GB)</string>
    <string name="overview_resource_cpu">CPU (MHz)</string>
    <string name="overview_resource_disk">Storage (GB)</string>
    <string name="overview_used_snapshots">Used Snapshots</string>
    <string name="overview_max_snapshots">Maximum Snapshots</string>
    <string name="refresh">Refresh</string>
    <string name="list_usertype">"User type: "</string>
    <string name="overview_used_templates">Used Templates</string>
    <string name="overview_max_templates">Max Templates / ISO</string>
    <string name="overview_used_isos">Used ISO</string>
    <string name="instance_statistics">Statistics</string>
    <string name="instances_os_name">"OS Type: "</string>
    <string name="instances_offering">"Offering: "</string>
    <string name="instances_state">"State: "</string>
    <string name="instances_add_new">Add Instance</string>
    <string name="instances_start">Start</string>
    <string name="instance_starting">Starting instance...</string>
    <string name="instance_stopping">Stopping instance...</string>
    <string name="instances_stop">Stop</string>
    <string name="instances_destroy">Destroy</string>
    <string name="instances_attach">Attach ISO</string>
    <string name="instances_detach">Detach ISO</string>
    <string name="instances_resetpwd">Reset Password</string>
    <string name="instances_choffering">Change Offering</string>
    <string name="title_instance_source">Instance Source</string>
    <string name="title_template_source">Source Template</string>
    <string name="title_service_offering">Service Offering</string>
    <string name="title_net_offering">Network Offering</string>
    <string name="title_optional">Optional</string>
    <string name="title_disk_offering">Disk Offering</string>
    <string name="btn_create_instance">Create</string>
    <string name="loading">Loading...</string>
    <string name="none">None</string>
    
    
    <string-array name="instances_sources_array">
        <item>Template</item>
        <item>ISO</item>
    </string-array>
        <string name="next">Next</string>
        <string name="cloud_user">User Name</string>
        <string name="cloud_pass">Password</string>
        <string name="domain">Domain</string>
    
</resources>