<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >
	<ScrollView 
	        android:layout_width="fill_parent" 
	        android:layout_height="fill_parent">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical" >
		
		    <TextView
		        android:id="@+id/textView1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/cl_name"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <EditText
		        android:id="@+id/clName"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:singleLine="true" >
		
		        <requestFocus />
		    </EditText>
		
		    <TextView
		        android:id="@+id/textView2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/empty"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <TextView
		        android:id="@+id/textView5"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/cl_url"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <EditText
		        android:id="@+id/clUrl"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="textUri"
		        android:singleLine="true" />
		
		    <TextView
		        android:id="@+id/textView3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/cloud_user"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <EditText
		        android:id="@+id/clApiKey"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:singleLine="true" />
		
		    <TextView
		        android:id="@+id/textView4"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/cloud_pass"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <EditText
		        android:id="@+id/clSecKey"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="textPassword" />
		
		    <Button
		        android:id="@+id/btnSaveCloud"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/save"
		     	android:onClick="saveCloud" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>