<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
	<ScrollView 
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent">
	    
	    S<RelativeLayout
	        android:id="@+id/relativeLayout1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/title_resource_usage"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="15dp"
	            android:layout_marginTop="25dp"
	            android:text="@string/overview_resource_usage"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/title_resource_ram"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignRight="@+id/title_resource_usage"
	            android:layout_below="@+id/title_resource_usage"
	            android:text="@string/overview_resource_ram"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/title_resource_cpu"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignRight="@+id/title_resource_ram"
	            android:layout_below="@+id/title_resource_ram"
	            android:text="@string/overview_resource_cpu"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/title_resource_storage"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignRight="@+id/title_resource_cpu"
	            android:layout_below="@+id/title_resource_cpu"
	            android:text="@string/overview_resource_disk"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/title_running_instances"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_below="@+id/title_resource_storage"
	            android:layout_marginLeft="25dp"
	            android:layout_marginTop="50dp"
	            android:text="@string/ovwerview_running_instances"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/title_stopped_instances"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignRight="@+id/title_running_instances"
	            android:layout_below="@+id/title_running_instances"
	            android:text="@string/overview_stopped_instances"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/title_max_instances"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignRight="@+id/title_stopped_instances"
	            android:layout_below="@+id/title_stopped_instances"
	            android:layout_marginTop="5dp"
	            android:text="@string/overview_max_instances"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/title_used_volumes"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignRight="@+id/title_max_instances"
	            android:layout_below="@+id/title_max_instances"
	            android:layout_marginTop="20dp"
	            android:text="@string/overview_used_vols"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/title_max_volumes"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignRight="@+id/title_used_volumes"
	            android:layout_below="@+id/title_used_volumes"
	            android:text="@string/overview_max_vols"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/title_used_snapshots"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignRight="@+id/title_max_volumes"
	            android:layout_below="@+id/title_max_volumes"
	            android:layout_marginTop="15dp"
	            android:text="@string/overview_used_snapshots"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/title_max_snapshots"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignRight="@+id/title_used_snapshots"
	            android:layout_below="@+id/title_used_snapshots"
	            android:text="@string/overview_max_snapshots"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	        
	        <TextView
	            android:id="@+id/title_used_templates"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignRight="@+id/title_max_snapshots"
	            android:layout_below="@+id/title_max_snapshots"
	            android:layout_marginTop="15dp"
	            android:text="@string/overview_used_templates"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	        
	        <TextView
	            android:id="@+id/title_used_isos"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignRight="@+id/title_used_templates"
	            android:layout_below="@+id/title_used_templates"
	            android:text="@string/overview_used_isos"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	        
	        <TextView
	            android:id="@+id/title_max_templates"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignRight="@+id/title_used_isos"
	            android:layout_below="@+id/title_used_isos"
	            android:text="@string/overview_max_templates"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	        
	        <TextView
	            android:id="@+id/txt_ram"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBaseline="@+id/title_resource_ram"
	            android:layout_alignBottom="@+id/title_resource_ram"
	            android:layout_toRightOf="@+id/title_running_instances"
	            android:text="Medium Text"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/txt_cpu"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/txt_ram"
	            android:layout_alignLeft="@+id/txt_ram"
	            android:text="Medium Text"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/txt_storage"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignLeft="@+id/txt_cpu"
	            android:layout_below="@+id/txt_cpu"
	            android:text="Medium Text"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/txt_running_instances"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBaseline="@+id/title_running_instances"
	            android:layout_alignBottom="@+id/title_running_instances"
	            android:layout_alignLeft="@+id/txt_storage"
	            android:layout_marginLeft="20dp"
	            android:text="Medium Text"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/txt_stopped_instances"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBaseline="@+id/title_stopped_instances"
	            android:layout_alignBottom="@+id/title_stopped_instances"
	            android:layout_alignLeft="@+id/txt_running_instances"
	            android:text="Medium Text"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/txt_max_instances"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBaseline="@+id/title_max_instances"
	            android:layout_alignBottom="@+id/title_max_instances"
	            android:layout_alignLeft="@+id/txt_stopped_instances"
	            android:text="Medium Text"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/txt_used_vols"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBaseline="@+id/title_used_volumes"
	            android:layout_alignBottom="@+id/title_used_volumes"
	            android:layout_alignLeft="@+id/txt_max_instances"
	            android:text="Medium Text"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/txt_max_vols"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignLeft="@+id/txt_used_vols"
	            android:layout_below="@+id/txt_used_vols"
	            android:text="Medium Text"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/txt_used_snap"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBaseline="@+id/title_used_snapshots"
	            android:layout_alignBottom="@+id/title_used_snapshots"
	            android:layout_alignLeft="@+id/txt_max_vols"
	            android:text="Medium Text"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/txt_max_snap"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBaseline="@+id/title_max_snapshots"
	            android:layout_alignBottom="@+id/title_max_snapshots"
	            android:layout_alignLeft="@+id/txt_used_snap"
	            android:text="Medium Text"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	        
	        <TextView
	            android:id="@+id/txt_used_templates"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBaseline="@+id/title_used_templates"
	            android:layout_alignBottom="@+id/title_used_templates"
	            android:layout_alignLeft="@+id/txt_max_snap"
	            android:text="Medium Text"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/txt_used_isos"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBaseline="@+id/title_used_isos"
	            android:layout_alignBottom="@+id/title_used_isos"
	            android:layout_alignLeft="@+id/txt_max_snap"
	            android:text="Medium Text"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/txt_max_templates"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBaseline="@+id/title_max_templates"
	            android:layout_alignBottom="@+id/title_max_templates"
	            android:layout_alignLeft="@+id/txt_used_isos"
	            android:text="Medium Text"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	        
		</RelativeLayout>
	</ScrollView>
</LinearLayout>